# clutter

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
.gitlab-ci/: run-docker.sh  test-docker.sh
build-aux/: jhbuildrc-clutter
build-aux/autotools/: Makefile.am.changelog  Makefile.am.marshal  Makefile.am.release  glib-tap.mk
build-aux/win32/vs10/: README.txt
build-aux/win32/vs9/: README.txt
clutter/: Makefile.am  clutter-actor.c  clutter-backend.c  clutter-binding-pool.c  clutter-canvas.c  clutter-color.c  clutter-config.h.in  clutter-enum-types.h.in  clutter-event.h  clutter-input-device-tool.h  clutter-layout-manager.c  clutter-macros.h  clutter-main.c  clutter-script-parser.c  clutter-script.c  clutter-stage-window.c  clutter-stage-window.h  clutter-stage.c  clutter-text.c  clutter-transition.c  clutter-version.h.in  meson.build
clutter/cex100/: meson.build
clutter/cogl/: clutter-stage-cogl.c  clutter-stage-cogl.h
clutter/deprecated/: clutter-shader.c  clutter-table-layout.c
clutter/egl/: clutter-egl.h  clutter-stage-eglnative.c
clutter/gdk/: clutter-input-device-gdk.c  clutter-stage-gdk.c  clutter-stage-gdk.h
clutter/mir/: clutter-event-mir.c
clutter/osx/: clutter-event-osx.c
clutter/wayland/: clutter-input-device-wayland.c
clutter/win32/: clutter-event-win32.c
doc/: BACKENDS.md  CONTRIBUTING.md  Makefile.am  meson.build
doc/cookbook/: Makefile.am  meson.build
doc/cookbook/examples/: Makefile.am  events-mouse-scroll.c  layouts-bind-constraint-stage.c  layouts-box.c  meson.build
doc/reference/: clutter-docs.xml  clutter-sections.txt  meson.build  running-clutter.xml
doc/reference/xml/: meson.build
examples/: Makefile.am  meson.build  threads.c
po/: LINGUAS  Makevars  as.po  az_IR.po  be.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  lt.po  lv.po  mk.po  ml.po  ms.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+11 more)
tests/: Makefile.am  meson.build
tests/accessibility/: Makefile.am
tests/conform/: Makefile.am  meson.build  script-parser.c  test.data.in
tests/interactive/: Makefile.am  test-script.c
tests/micro-bench/: Makefile.am
tests/performance/: Makefile.am
