option('backends',
       description: 'Comma-separated list of windowing system backends, ("all", "system", "x11", "gdk", "win32", "wayland", "quartz", "eglnative")',
       type: 'string',
       value: 'system')
option('drivers',
       description: 'Comma-separated list of Cogl drivers to use, or "all"',
       type: 'string',
       value: 'all')
option('build_tests',
       description: 'Build the Clutter tests suites',
       type: 'boolean',
       value: true)
option('build_examples',
       description: 'Build the Clutter examples',
       type: 'boolean',
       value: true)
option('documentation',
       description: 'Generate the Clutter documentation (requires gtk-doc)',
       type: 'boolean',
       value: true)
option('introspection',
       description: 'Generate the GObject introspection data (requires gobject-introspection)',
       type: 'boolean',
       value: true)
option('wayland_compositor',
       description: 'Enable Wayland compositor features',
       type: 'boolean',
       value: false)
option('pixbuf_tests',
       description: 'Enable GdkPixbuf-based tests and examples',
       type: 'boolean',
       value: true)
